fixed responsivness issues on smaller screens

--- a/src/styles/JMPhone.css
+++ b/src/styles/JMPhone.css
@@ -10,7 +10,22 @@
   float: right;
   border-radius: 20px;
 }
+
 @media screen and (max-width: 700px) {
+  .phone {
+    display: none;
+  }
+}
+@media screen and (max-width: 995px) {
+  .phone {
+    height: 45vh;
+    margin-top: 78px;
+    margin-right: 100px;
+    margin-left: 50px;
+  }
+}
+
+@media screen and (max-width: 949px) {
   .phone {
     display: none;
   }
