--- a/src/styles/JMText.css
+++ b/src/styles/JMText.css
@@ -48,9 +48,20 @@ img {
 }
 
 /* mobile responsiveness */
+
+@media screen and (max-width: 949px) {
+  .section {
+    margin: 100px 200px;
+  }
+}
+@media screen and (max-width: 716px) {
+  .section {
+    margin: 60px 90px;
+  }
+}
 @media screen and (max-width: 700px) {
   .section {
-    margin: 60px 30px;
+    margin: 60px 80px;
     height: 50vh;
     padding-top: 30px;
   }
